# stellar-Vote

./: .gitignore  .vercelignore  README.md  vercel.json
.github/workflows/: ci.yml
backend/: Cargo.toml  render.yaml
backend/src/: main.rs
contracts/poll/: Cargo.toml
contracts/poll/src/: lib.rs
contracts/reward/src/: lib.rs
docs/: index.html
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
frontend/scripts/: deploy.mjs  init.mjs
frontend/src/: App.tsx  CommunitySection.tsx  CountdownTimer.tsx  Dashboard.tsx  FeedbackWidget.tsx  HowItWorks.tsx  LandingPage.tsx  Leaderboard.tsx  OnboardingModal.tsx  PollCategories.tsx  PollShareButton.tsx  PollTemplates.tsx  StatsCounter.tsx  ThemeProvider.tsx  VoteHistory.tsx  index.css  main.tsx  stellar.ts  types.ts
frontend/src/components/: MistralChat.tsx  animations.tsx
frontend/src/services/: analytics.ts  backend.ts  contract.ts  voteHistory.ts  wallets.ts
frontend/src/test/: backend.test.ts  types.test.ts
